movies/nohup/nohup.out
nohup: ignoring input
  File "salinity_2016.py", line 1
    %pylab inline
    ^
SyntaxError: invalid syntax
